Updated all elements

--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>About me - Aderoju Johnson</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Aderoju Johnson</a>
+        <a class="navbar-brand" href="/">Aderoju Johnson</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +36,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="/index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -64,19 +64,19 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             class="img-fluid border rounded p-2 shadow"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             class="img-fluid border rounded p-2 shadow"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             class="img-fluid border rounded p-2 shadow"
           />
         </div>
