Made website SEO friendly

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front-end developer - Aderoju Johnson</title>
     <link rel="stylesheet" href="/src/style.css" />
+    <meta
+      name="description"
+      content="Aderoju Johnson is a Front-end Developer based in Nigeria, please check out her portfolio for more details and job inquiries"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/index.html">Aderoju Johnson</a>
+        <a class="navbar-brand" href="/" title="Homepage">Aderoju Johnson</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,15 +39,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About me</a>
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Aderoju Johnson"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Aderoju Johnson"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -53,13 +71,25 @@
     <h1 class="text-center">Aderoju Johnson</h1>
     <h3 class="text-center">🇳🇬 Front-end developer, based in Nigeria</h3>
     <div class="navigation-links mb-5">
-      <a href="/about.html#contact" class="primary-link">Contact me</a>
-      <a href="/about.html" class="secondary-link">About me</a>
+      <a
+        href="/about.html#contact"
+        class="primary-link"
+        title="Contact Aderoju Johnson"
+        >Contact me</a
+      >
+      <a href="/about.html" class="secondary-link" title="About Aderoju Johnson"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="/images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="/images/yoga.png"
+            alt="Yoga project"
+            class="img-fluid rounded"
+            title=""
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -70,7 +100,9 @@
             voluptatum blanditiis harum.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -84,16 +116,26 @@
             voluptatum blanditiis harum.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
-          <img src="/images/weather.png" class="img-fluid rounded" />
+          <img
+            src="/images/weather.png"
+            class="img-fluid rounded"
+            alt="Weather project"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="/images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="/images/yogurt.png"
+            class="img-fluid rounded"
+            alt="Yogurt project"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -104,7 +146,9 @@
             voluptatum blanditiis harum.
           </p>
           <div class="mt-5 mb-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link" title="Yogurt project"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
