--- a/about.html
+++ b/about.html
@@ -17,11 +17,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
     <title>About me - Aderoju Johnson</title>
+    <meta
+      name="description"
+      content="Aderoju Johnson is a Front-end Developer based in Nigeria"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Aderoju Johnson</a>
+        <a class="navbar-brand" href="/" title="Homepage">Aderoju Johnson</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +40,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About me</a>
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Aderoju Johnson"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Aderoju Johnson"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -66,25 +84,31 @@
           <img
             src="/images/yoga.png"
             class="img-fluid border rounded p-2 shadow"
+            alt="Yoga project"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/weather.png"
             class="img-fluid border rounded p-2 shadow"
+            alt="Weather project"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/yogurt.png"
             class="img-fluid border rounded p-2 shadow"
+            alt="Yogurt project"
           />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:dherry007@gmail.com" class="email-link"
+      <a
+        href="mailto:dherry007@gmail.com"
+        class="email-link"
+        title="Contact me via email"
         >dherry007@gmail.com</a
       >
     </div>
