Made the website look better on mobile.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             voluptatum blanditiis harum.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Yoga project"
+            <a href="#" class="primary-link project-link" title="Yoga project"
               >Launch Yoga App</a
             >
           </div>
@@ -116,7 +116,10 @@
             voluptatum blanditiis harum.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link" title="Weather project"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Weather project"
               >Launch Weather App</a
             >
           </div>
@@ -146,7 +149,7 @@
             voluptatum blanditiis harum.
           </p>
           <div class="mt-5 mb-5">
-            <a href="#" class="primary-link" title="Yogurt project"
+            <a href="#" class="primary-link project-link" title="Yogurt project"
               >Launch Yogurt App</a
             >
           </div>
